--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
     "vue": "^2.6.11",
+    "vue-awesome-swiper": "^2.6.7",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
   },
